# ChangeLog for dev-perl/PortageXS
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.50 2012/12/19 16:28:54 jer Exp $

  19 Dec 2012; Jeroen Roovers <jer@gentoo.org> PortageXS-0.02.10-r2.ebuild:
  Stable for HPPA (bug #437414).

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> PortageXS-0.02.10-r2.ebuild:
  Stable for ia64, wrt bug #437414

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> PortageXS-0.02.10-r2.ebuild:
  Stable for ppc, wrt bug #437414

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> PortageXS-0.02.10-r2.ebuild:
  Stable for x86, wrt bug #437414

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> PortageXS-0.02.10-r2.ebuild:
  Stable for amd64, wrt bug #437414

*PortageXS-0.02.10-r2 (15 Dec 2012)

  15 Dec 2012; Raúl Porcel <armin76@gentoo.org> +PortageXS-0.02.10-r2.ebuild,
  +files/PortageXS-0.02.10-portage_path_fix.patch,
  +files/PortageXS-0.02.10-prefix.patch:
  Add patch to fix bug #437414

  14 Dec 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due move to staffer, bug #99016

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -PortageXS-0.02.10.ebuild:
  Cleanup

  18 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  PortageXS-0.02.10-r1.ebuild:
  mark ~ppc64

  02 Apr 2010; Raúl Porcel <armin76@gentoo.org> PortageXS-0.02.09.ebuild,
  PortageXS-0.02.10.ebuild, PortageXS-0.02.10-r1.ebuild:
  Add ~arm/~sh

*PortageXS-0.02.10-r1 (10 Jan 2010)

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  +files/PortageXS-0.02.09-prefix.patch, +PortageXS-0.02.10-r1.ebuild:
  Revision bump for Prefix fix and transfer of Prefix keywords, bug #294758

*PortageXS-0.02.10 (15 Apr 2009)

  15 Apr 2009; Christian Hartmann <ian@gentoo.org>
  -PortageXS-0.02.07.ebuild, -PortageXS-0.02.08.ebuild,
  +PortageXS-0.02.10.ebuild:
  Bump & cleanup

  19 Jan 2009; Jeroen Roovers <jer@gentoo.org> PortageXS-0.02.09.ebuild:
  Stable for HPPA (bug #252687).
