@@ -1,0 +1,4 @@
+DIST Email-Send-Gmail-0.33.tar.gz 2800 SHA256 f2a26e4cf9f1ff7cc9b1e8a791e9e97d2ca0b4e1fd052ba15a417c4e06619458 SHA512 6a822b14c5f0fc65a01b3f8b29fc84ae92950e3c1b6d2ce7f8873aae9a7972c015ae8c33d809ac6b179fe8d9031874c94114de47df8175a899f53cc3676e7ef6 WHIRLPOOL fa89768cc9ed6dbc5d99dc69cdcc11f37f067254db0aeb6cabdd622d42730d60ad3c8ba255b943fed998f422961859f96d2dde6e0adcd026ebfa7280dfaaee69
+EBUILD Email-Send-Gmail-0.330.0.ebuild 576 SHA256 64904224e0d7cb61b75c644ad806eb0031743244fc4c1a8db0e0d5e8c957a64b SHA512 13a5d0c6ae9f67ea8a17c7ddb7702381672153d33b9eb81caa3be094e7bdd570b106495d4bf0b9104db5f04efc9ba67637954570d5c7cd34a7df9085b7996cfb WHIRLPOOL 4258fbe6ad25c47adef86660968f6ba8a1831bf78a74e7ed124fee3ab581537a4c505c02df8ff1a2b8325a151b033cc79e0ae8e68aa3f076e6e0460ca5b52afd
+MISC ChangeLog 485 SHA256 f8d0fe60b4d013b1caf82ec5f71e3e65c1dc7141e32d7344cbc0521161e2b101 SHA512 90e67e7f7c505fb287db84cb5c7624cf6d54edbc299da7b9a8714b0ea8b302f4ab67e01e46463a8b995537b65088f9ccb4f1bdd256f1bdffbaa0e725e483f0e9 WHIRLPOOL 68a9f802d9c2d61fe12092703249f65d546b03f54adeafcd520b1be6ec596d336aa6bf9a33a1182e71ed4804c16b7fab97c75eb6fcfda2d14628e4f8622bc162
+MISC metadata.xml 484 SHA256 4ae41dfff8744a8595b4d69e801e678a5473482be89dc6c725527398c1bc0541 SHA512 cfc6b57ebb2e7bc349f6fc8ff3c1e19db1ad6c96058ce017c7e2d4ba0d7297d7b6eb7fe4a9ed81335edbfac8655c15cbd03d268d865c70083f8cf50a15726c00 WHIRLPOOL 4c34d116e6240803e3f84cb840b04606de2e92d31d3febdfe00b0c7a7f54647766be601981f072462b7ca5a47a818ca1ccc189b589a906efd082a744c17f5cc7
