@@ -8,13 +8,13 @@ DIST PortageXS-0.02.09.tar.gz 28926 SHA256 7083421723e8469fba719ee0c6230c6d2ab62
 DIST PortageXS-0.02.10.tar.gz 28890 SHA256 1d41222577243d8fa004ce3dfeb67dce95c10339218ee1097d972cb8f97862c2 SHA512 8f5a6cf8fa415e13401fd7901c81fef42e0cee81b7a9c1f276cce9582c705ac7e2004ec213033fce065f965445342ed0140d8b752d2e857dd40c620ed4af6b1b WHIRLPOOL 3c7d41f5d5647ba4f31ef8d07f5172bf76c1ccb443443df37e526a91f76e1353c6c04941077d45a89d8b08d68b0b263dab5a08b923d6fb0faad1572c8c292333
 EBUILD PortageXS-0.02.09.ebuild 1178 SHA256 573b60d1915aac6580488fadfa66ed9c4808f4037a058073512cd804552b5a6e SHA512 3d724c9cdb026cdf94520ed08c45f136a86aead06543214a03f36bc0ac24d659f61f20d48853bcf129a8d54d297546136582284766a40ffb1e1262a85a58b6ea WHIRLPOOL a553fdb3621a25b2d5c9042f53fc66f5647bb835987a0837035aabecf29f029feb2d865bdb11001a2b03085eb46dbbd8c76dcbdf67d5d6fee4726fb169d24989
 EBUILD PortageXS-0.02.10-r1.ebuild 1548 SHA256 6d8a8856ae5f18de788daefda06874e50a6bd64d34585ed789287d6ccccca008 SHA512 bc8aa80cbf407c1bda061edf4b9fab0d69b22a5a8793656a3e7bb151ebd7e2d7df9afb3f448160cc668d9e90adae0e2164aef78652f71fdfb5af0c684954297f WHIRLPOOL 828b2b8fdbd4d8ef014dd09692a03a38af063c91a2adb514849f29b057b643f8fc9ae33ec40150a3c2ec78f5ce42e3768a6e2825bb671ae2b7456abc48b3cdc3
-EBUILD PortageXS-0.02.10-r2.ebuild 1595 SHA256 35312159f20621c16df7f0b3dd69e0ec3852e6cbfc249e42c2e50b051dfa025a SHA512 7663858c17c268331ae79402e010368f46fe8ff94b1f1758cb93018bef1376707c8460389431488af6c89be663509449c1c86937b48cf9169c73a98566ef0e40 WHIRLPOOL 22881d70f7a4fac491b222da2aba84251ca306a0d16b3e8cde1730357929e72e2a0b68fde8cf897bd9224971a27009cd6ef815c7b055c194c2ab9ddb15073af4
-MISC ChangeLog 6657 SHA256 dd4dcdb718c264b8d2e0e5f8227959953bf9818a3897f31d7ffb0a56570f35f8 SHA512 1207ccf0970cf5bbfbf0d6269f562f76baecf875e7232cec1b8f7a0b431f99f1bbce409826c303a00bfdc5a8741a40205e871a95189b783189e95a888854bfcb WHIRLPOOL b9b7783f1eea20a92817d7a4bdfc9cb052f38677d585c0ab966179c1a936ee4719bb993b051bf57a770d51e1d3816858285ee5a5602951ab7b157d26e65b0186
+EBUILD PortageXS-0.02.10-r2.ebuild 1596 SHA256 53c5410dbcbec435a73a4f1c9dca069fbe35ddeaca40876d771f62372af30360 SHA512 38d5565b66253073546b28a0f46bebd09103ef88e7fc8f5e740c3c4aa99b30644546255211015b8072f7f250a7730cb390ea65c976c97ddc2ee20c0e9d028832 WHIRLPOOL 95810acda056da00331bf3eae7564970411769462cf1d9915b5365f87de4f066866880a391307fa003baeeaba7d74d025f40e2514ab4f5fbe21e928778c063a0
+MISC ChangeLog 6879 SHA256 eca68d1b24cfa7be60ecb5c5ab71b301874795981d76adbad93d416b881db8c2 SHA512 fc146318868265bb0a5c09365fb67c511405bb36e55f8324dfdf98c4f9faab6356f769390e8ba8120af82079a683f0aafd7226195287839d10c69e2c22d93063 WHIRLPOOL bf7b04a45339a4e745f7b1f1ae4d161db5a134d975eadd66df44c64fd74a2874fdaac9f0ef8422789e0925cc56ca25016a24f923a6147226cfedb381b249f6b9
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDR60cACgkQVWmRsqeSphMGsACeOmonlyYTJzZEQaN/v7qkXTic
-oTkAn0j2y9u/cxX2D4iXz6wT3R0LS++S
-=JOS5
+iEYEAREIAAYFAlDXV5EACgkQkKaRLQcq0GJd1ACggzXC+9Don+dLTx2vunV1UUf0
+UeUAn1L9D7mtQPv1S0lKiMcpOnWIAtoX
+=8Mwj
 -----END PGP SIGNATURE-----
