@@ -18,6 +18,6 @@ DIST subversion-1.7.6.tar.bz2 6006767 SHA256 d1a4f13c5c992a1527a2aeac262c6f54e07
 DIST subversion-1.7.7.tar.bz2 6023686 SHA256 fc85a9341d1dc275b279e470776014b02328a028e48a7ac7868ac07d4a40a321 SHA512 0ce0a22e05c76132d9a1650cee3d7fdf6eb7606eb7197ee604e48129e6e3ba7ebc910d71c756ef2aced7100c8cd9a7d1dc3da8744315be0a8c506fdafa8ada19 WHIRLPOOL d0c82ab9abd8e95cbd5a5cf0d082a5b1eda7451bfaa5754d33a10279d94548f8c1457b3089c4bbb3347569b96be293e04371c05965ab2019aa38084831bc111d
 EBUILD subversion-1.6.17-r7.ebuild 16378 SHA256 be56ed7e650e8cb529f8056fa7722bdab5137a8f7f1cbef419fbcc633430ccd8 SHA512 c4edda843f685ac18b5b8dbacc9160b27f397b34ec7619a4493558945d15248c0e2a0bf04dc66855889d48f5205dfca9d0909d045f0b3b9a8c6c9c58040e6c68 WHIRLPOOL d581a5211295a13131b2a4ac5ffb2a9b0702cdf0e78d9c1d25877b6a1e588d537d4ca32dd441cba040887c74b5d0cd607b4cb5325fdfedd9b1b90ad428c34760
 EBUILD subversion-1.7.6.ebuild 15754 SHA256 0091087f29c193141eacd222f69c3980fd5eca113356b90c552344e7942e0a4a SHA512 711502b245ea0d906fedb94bda975e6587848c610c1278e2ff8aa8545e7380df01519f107dcba2a39d07075e11e5cb0e0725ad3bcbb36883f87a16d97ff69e0a WHIRLPOOL 1cf5d84a0bc43c9b1119896e3b9e5de485cc9e44ca1f30057dc0ae48ad07737579f841b0220eb017a04b202e9c299c03e13a065c68fb28ab5a03cfaf02a7c3f9
-EBUILD subversion-1.7.7.ebuild 16155 SHA256 8f86ce8d9ee3f7aa57ced982abf7aeffb69770ece858620e7584eed033dd6a46 SHA512 70cd5bab4718bc8aa081cd63c66f10547a0837157234b33740ba53ffa61241ea83d7903625c81aa211534c133ca515ef900c1843d2f7c609ff1645aedb71137c WHIRLPOOL 7423e6c0d978807a4100560828912df92243cee04d899deb6e8db441a7acb2eaa28fd6beec9b350a4bd979c9bb239387568e75e05e3959af9e1c0a2df1594f83
-MISC ChangeLog 86885 SHA256 cba10f71e745fc318d780033382a368889eaec8ae34d9af6d7b02d6c09b5df20 SHA512 46ac775792118ff6364d2ccd84266abe665e6332694a6656c88243a895f839e2678c100fec55e744df526790961931746bfd3f0372c789204f1ea0ea8df2307f WHIRLPOOL d5fce22edf3739940b3eef8d1b4b7e2510304e9f1d57d23a515c8a9c17d8dead24c8d0357c4067f7bfdf2b60cb220f604312eb74870cb01c03701737dd6718bb
+EBUILD subversion-1.7.7.ebuild 16154 SHA256 fc2ea13a4b49445428b2baf7ab211d2bf03a6c31a2526e917d0358a06a54a4de SHA512 bdfaed2287209ae0574589a80ae625bb203f2e8b2ff8a796e296903ff00873d5f0b7d1e0031afc5be995867ba6c0407296687568b99517a5bfffa9f0dedc85c5 WHIRLPOOL 28b69c1aae2fda072c5ee43cd263512c14d421a7e3c69b7a845eb5380fc9734c7b3cfc7d284151eb60f3c0d41494b4e60acea84138fea1d15a99a18383e6791e
+MISC ChangeLog 86996 SHA256 822d90f6e96a07e1efda5414235def13d48417ea56a91af9ad21b389f6829cdc SHA512 a72ffabfa231582a7e1c6a0eeeeee3c5e8f5a4066e58f0e138657192cc844a9051a8656f480c17856d7e36852d8a898f5d9cf536da76df90ee3abbed6e86623a WHIRLPOOL eafb601b4243091669e734cd25a42e69e4a3dbe2587e0a465b208b6778e417e5063f2cd4f063dacab17b3560ea5efa12c7b36f4e48f596160f6ac4333a0f6fc0
 MISC metadata.xml 628 SHA256 b3715692f57550cecbca66df385d0cc48ef3d6707b4832b88add2f689c35969d SHA512 2c1f375df0efee06e088db3c7c19b96e23b615053aaaa98bc45b5d4945a39a3c21a868c80b938be88ff840824b2e8aebe9379633f106d2cfead4b3fd74cff927 WHIRLPOOL 1387297f9b5b7feb6e90cbda59b0cd61519d0395ec94fb315d2ec97adb66c37a9aa59736d968920eab7229342105846805458b8789dc84ef9ecbd40e452c02c8
