@@ -1,0 +1,11 @@
+# ChangeLog for dev-perl/Email-Send-Gmail
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Send-Gmail/ChangeLog,v 1.1 2012/12/24 09:12:04 pinkbyte Exp $
+
+*Email-Send-Gmail-0.330.0 (24 Dec 2012)
+
+  24 Dec 2012; Sergey Popov <pinkbyte@gentoo.org>
+  +Email-Send-Gmail-0.330.0.ebuild, +metadata.xml:
+  Initial commit wrt bug #447724. Ebuild by Mikle Kolyada. He will maintain
+  this package through proxy maintainers
+
