@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/subversion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.88 2012/12/22 13:59:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.89 2012/12/23 17:03:20 ago Exp $
+
+  23 Dec 2012; Agostino Sarubbo <ago@gentoo.org> subversion-1.7.7.ebuild:
+  Stable for ppc64, wrt bug #447946
 
   22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> subversion-1.7.7.ebuild:
   Stable for ppc, wrt bug #447946
